Added Camera and Frustum class

--- a/SDL-QuakeViewer.vcxproj
+++ b/SDL-QuakeViewer.vcxproj
@@ -19,11 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\PAK.cpp" />
     <ClCompile Include="src\QBSP.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\Frustum.h" />
     <ClInclude Include="src\PAK.h" />
     <ClInclude Include="src\QBSP.h" />
     <ClInclude Include="src\quakedef.h" />
