--- a/SDL-QuakeViewer.vcxproj.filters
+++ b/SDL-QuakeViewer.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="src\QBSP.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="src\Camera.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\PAK.h">
@@ -33,6 +36,12 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="src\quakedef.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Camera.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Frustum.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
