Added header with vector & matrix definitions, operations and funcs to make projection matrix

--- a/SDL-QuakeViewer.vcxproj
+++ b/SDL-QuakeViewer.vcxproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Frustum.h" />
+    <ClInclude Include="src\mathlib.h" />
     <ClInclude Include="src\PAK.h" />
     <ClInclude Include="src\QBSP.h" />
     <ClInclude Include="src\quakedef.h" />
