--- a/SDL-QuakeViewer.vcxproj.filters
+++ b/SDL-QuakeViewer.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\Camera.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="src\Window.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\PAK.h">
@@ -45,6 +48,9 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="src\mathlib.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Window.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
