--- a/SDL-QuakeViewer.vcxproj
+++ b/SDL-QuakeViewer.vcxproj
@@ -19,20 +19,19 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Camera.cpp" />
-    <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\PAK.cpp" />
-    <ClCompile Include="src\QBSP.cpp" />
-    <ClCompile Include="src\Window.cpp" />
+    <ClInclude Include="src\Common\quakedef.h" />
+    <ClInclude Include="src\Renderer\Camera.h" />
+    <ClInclude Include="src\Renderer\Frustum.h" />
+    <ClInclude Include="src\Resource\PAK.h" />
+    <ClInclude Include="src\Resource\QBSP.h" />
+    <ClInclude Include="src\System\Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Camera.h" />
-    <ClInclude Include="src\Frustum.h" />
-    <ClInclude Include="src\mathlib.h" />
-    <ClInclude Include="src\PAK.h" />
-    <ClInclude Include="src\QBSP.h" />
-    <ClInclude Include="src\quakedef.h" />
-    <ClInclude Include="src\Window.h" />
+    <ClCompile Include="src\Renderer\Camera.cpp" />
+    <ClCompile Include="src\Resource\PAK.cpp" />
+    <ClCompile Include="src\Resource\QBSP.cpp" />
+    <ClCompile Include="src\System\main.cpp" />
+    <ClCompile Include="src\System\Window.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -94,7 +93,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\vendor\glm;$(SolutionDir)\vendor\SDL2-2.0.20\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\vendor\glm;$(SolutionDir)\vendor\SDL2-2.0.20\include;$(SolutionDir)\src\Common;$(SolutionDir)\src\Math;$(SolutionDir)\src\Renderer;$(SolutionDir)\src\Resource;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\vendor\SDL2-2.0.20\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
